<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.offline.PlayOfflineOptionActivity"
    android:background="@drawable/bg_wood">

    <LinearLayout
        android:id="@+id/gameMenuLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintWidth_percent="0.6"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPassAndPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass_and_play"/>

        <Button
            android:id="@+id/btnComputer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_with_computer"/>

        <Button
            android:id="@+id/btnLoadGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_saved_game"/>

        <Button
            android:id="@+id/btnSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>