<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.online.PlayOnlineOptionActivity"
    android:background="@drawable/bg_wood">
    <LinearLayout
        android:id="@+id/gameMenuLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintWidth_percent="0.6"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPlayWithOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_with_other"/>

        <Button
            android:id="@+id/btnPlayWithFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_with_friend"/>

        <Button
            android:id="@+id/btnProfileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_info"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>