<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_wood"
    tools:context=".activities.offline.ComputerSettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12">

        <LinearLayout
            android:id="@+id/linearLayoutPlayer1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtPLayerName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player_name"
                android:textColor="#3E2723"/>


            <EditText
                android:id="@+id/editTextPlayer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/player_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@string/player1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSelectPiece"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtPiece"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_piece"
                android:textColor="#3E2723"/>

            <Spinner
                android:id="@+id/spinnerSelectPiece"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                tools:ignore="SpeakableTextPresentCheck" />




        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTimerOption"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtTimer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/game_timer"
                android:textColor="#3E2723"/>

            <Spinner
                android:id="@+id/timerDropdown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editTextTimer"
                android:hint="@string/custom_timer_limit_hint"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutUndoRedo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtUndoRedo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/undo_and_redo_move"
                android:gravity="center"
                android:textColor="#3E2723"/>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchUndoRedo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutShowAvailableMove"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtShowAvailableMove"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/show_valid_piece_move"
                android:gravity="center"
                android:textColor="#3E2723"/>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchShowAvailableMove"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutShowLastMove"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtShowLastMove"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/show_last_moved_piece"
                android:gravity="center"
                android:textColor="#3E2723"/>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchShowLastMove"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSound"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtSound"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sound"
                android:gravity="center"
                android:textColor="#3E2723"/>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchSound"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"/>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutChangeSetting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtChangeSetting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:text="@string/change_settings"
                android:gravity="center"
                android:textColor="#3E2723"/>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchChangeSetting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:checked="true"/>


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/start_match"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884"
        android:onClick="onStartClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>