<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_wood"
    tools:context=".activities.online.RoomDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:background="@drawable/border_top_and_bottom">

            <TextView
                android:id="@+id/txtRoomName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/border"
                android:textColor="@color/green"
                android:text="@string/room_id"/>

            <TextView
                android:id="@+id/txtRoomNameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/border"
                android:textColor="@color/green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:background="@drawable/border_top_and_bottom">

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/border"
                android:textColor="@color/green"
                android:text="@string/password"/>

            <TextView
                android:id="@+id/txtPasswordValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/border"
                android:textColor="@color/green"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:background="@drawable/border_top_and_bottom">

            <TextView
                android:id="@+id/txtOpponentName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:background="@drawable/border"
                android:text="@string/opponent_name"/>

            <TextView
                android:id="@+id/txtOpponentNameValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/border"
                android:textColor="@color/green"
                android:text="@string/not_join_yet"/>
        </LinearLayout>

    </LinearLayout>




    <Button
        android:id="@+id/btnStartMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_match"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729"
        android:enabled="false"/>

    <Button
        android:id="@+id/btnDeleteRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />
</androidx.constraintlayout.widget.ConstraintLayout>